tests/nested/manual/core20-save: make sure environment variables are strings
Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/nested/manual/core20-save/task.yaml
+++ b/tests/nested/manual/core20-save/task.yaml
@@ -9,19 +9,19 @@ systems: [ubuntu-20.04-64]
 
 environment:
   # ubuntu-save, TPM, secure boot
-  NESTED_ENABLE_TPM/encrypted: true
-  NESTED_ENABLE_SECURE_BOOT/encrypted: true
-  NESTED_ADD_UBUNTU_SAVE/encrypted: true
+  NESTED_ENABLE_TPM/encrypted: "true"
+  NESTED_ENABLE_SECURE_BOOT/encrypted: "true"
+  NESTED_ADD_UBUNTU_SAVE/encrypted: "true"
 
   # add ubuntu-save, but but no TPM or secure boot support
-  NESTED_ENABLE_TPM/plainwithsave: false
-  NESTED_ENABLE_SECURE_BOOT/plainwithsave: false
-  NESTED_ADD_UBUNTU_SAVE/plainwithsave: true
+  NESTED_ENABLE_TPM/plainwithsave: "false"
+  NESTED_ENABLE_SECURE_BOOT/plainwithsave: "false"
+  NESTED_ADD_UBUNTU_SAVE/plainwithsave: "true"
 
   # no ubuntu-save, no TPM, no secure boot
-  NESTED_ENABLE_TPM/plain: false
-  NESTED_ENABLE_SECURE_BOOT/plain: false
-  NESTED_ADD_UBUNTU_SAVE/plain: false
+  NESTED_ENABLE_TPM/plain: "false"
+  NESTED_ENABLE_SECURE_BOOT/plain: "false"
+  NESTED_ADD_UBUNTU_SAVE/plain: "false"
 
 prepare: |
     # NESTED_ENABLE_TPM and NESTED_ADD_UBUNTU_SAVE are used by build-image
