updated for core18 and core20

--- a/tests/main/boot-state/task.yaml
+++ b/tests/main/boot-state/task.yaml
@@ -1,9 +1,9 @@
 summary: smoke test for the boot-state tool
 
-# ARM devices are not supported on ubuntu-core-18 due to fw_printenv/setenv are
+# ARM devices are not supported on ubuntu-core-18/20 due to fw_printenv/setenv are
 # not provided by the system and as the devices boot with uboot so it is not
 # possible to get any grub information as it is done with non arm devices.
-systems: [-ubuntu-core-*-arm-*]
+systems: [-ubuntu-core-18-arm-*, -ubuntu-core-20-arm-*]
 
 execute: |
 
