snapstate: implement "install-mode: disable" for services
This commit adds handling for "install-mode: disable" with the
new start-snap-services task.

--- a/tests/main/snap-service/task.yaml
+++ b/tests/main/snap-service/task.yaml
@@ -26,17 +26,23 @@ execute: |
         systemctl status snap.test-snapd-service.test-snapd-service-refuses-to-stop|MATCH "Result: timeout"
     fi
 
-    echo "A snap that was inhibited on startup will not start by default"
-    snap services | MATCH 'test-snapd-service.test-snapd-service-inhibit-startup\s+disabled\s+inactive'
+    #shellcheck source=tests/lib/snaps.sh
+    . "$TESTSLIB"/snaps.sh
+    
+    echo "A snap that has install-mode: disable will not start by default"
+    snap services | MATCH 'test-snapd-service.test-snapd-service-install-mode-disable\s+disabled\s+inactive'
+
     echo "And after a refresh the service stays disabled"
     install_local test-snapd-service
-    snap services | MATCH 'test-snapd-service.test-snapd-service-inhibit-startup\s+disabled\s+inactive'
-    echo "But a inhibited startup snap can be enabled"
-    snap start --enable test-snapd-service.test-snapd-service-inhibit-startup
-    snap services | MATCH 'test-snapd-service.test-snapd-service-inhibit-startup\s+enabled\s+active'
+    snap services | MATCH 'test-snapd-service.test-snapd-service-install-mode-disable\s+disabled\s+inactive'
+
+    echo "But install-mode: disable services can be enabled"
+    snap start --enable test-snapd-service.test-snapd-service-install-mode-disable
+    snap services | MATCH 'test-snapd-service.test-snapd-service-install-mode-disable\s+enabled\s+active'
+
     echo "And after a refresh the service stays enabled"
     install_local test-snapd-service
-    snap services | MATCH 'test-snapd-service.test-snapd-service-inhibit-startup\s+enabled\s+active'
+    snap services | MATCH 'test-snapd-service.test-snapd-service-install-mode-disable\s+enabled\s+active'
     # XXX: add test with a refresh vom v1 to v2
     # v1 has one services (srv1).
     # v2 has two services (srv1,srv2):
