--- a/tests/main/special-home-can-run-classic-snaps/task.yaml
+++ b/tests/main/special-home-can-run-classic-snaps/task.yaml
@@ -16,9 +16,8 @@ prepare: |
             apt-get install -y default-jre-headless
             wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | apt-key add -
             echo 'deb http://pkg.jenkins.io/debian-stable binary/' > /etc/apt/sources.list.d/jenkins.list
-            apt-get update
-            apt-get install -y jenkins
-            apt install jenkins
+            apt update
+            apt install -y jenkins
             ;;
         postgres)
             apt install -y postgresql
