--- a/tests/main/prepare-image-grub/task.yaml
+++ b/tests/main/prepare-image-grub/task.yaml
@@ -1,11 +1,9 @@
 summary: Check that prepare-image works for grub-systems
 
-systems: [-ubuntu-core-*, -fedora-*, -opensuse-*, -arch-*, -amazon-*, -centos-*]
+# ubuntu-14.04: systemd-run not supported
+systems: [-ubuntu-core-*, -opensuse-*, -ubuntu-14.04*]
 
 backends: [-autopkgtest]
-
-# ubuntu-14.04: systemd-run not supported
-systems: [-ubuntu-14.04*]
 
 # TODO: use the real stores with proper assertions fully as well once possible
 environment:
