Just supported systems in the systems list

--- a/tests/main/prepare-image-grub/task.yaml
+++ b/tests/main/prepare-image-grub/task.yaml
@@ -1,12 +1,6 @@
 summary: Check that prepare-image works for grub-systems
 
-# ubuntu-14.04: systemd-run not supported
-# ubuntu-core-*: building images is not explicitly supported
-# fedora-*: building images is not explicitly supported
-# centos-*: building images is not explicitly supported
-# arch-*: building images is not explicitly supported
-# amazon-*: building images is not explicitly supported
-systems: [-ubuntu-core-*, -fedora-*, -opensuse-*, -arch-*, -amazon-*, -centos-*, -ubuntu-14.04*]
+systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*]
 
 backends: [-autopkgtest]
 
