--- a/tests/main/classic-prepare-image-no-core/task.yaml
+++ b/tests/main/classic-prepare-image-no-core/task.yaml
@@ -1,7 +1,7 @@
 summary: Check that prepare-image --classic works.
 
-# ubuntu-14.04: systemd-run not supported
-systems: [-ubuntu-core-*, -fedora-*, -opensuse-*, -arch-*, -amazon-*, -centos-*, -ubuntu-14.04*]
+# building images is only supported on classic ubuntu, but ubuntu 14.04 does not have systemd-run to perform the test
+systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*]
 
 backends: [-autopkgtest]
 
