--- a/tests/main/boot-state/task.yaml
+++ b/tests/main/boot-state/task.yaml
@@ -1,11 +1,30 @@
 summary: smoke test for the boot-state tool
 
 execute: |
-
     # Check help
     "$TESTSTOOLS"/boot-state | MATCH "usage: boot-state bootenv"
     "$TESTSTOOLS"/boot-state -h | MATCH "usage: boot-state bootenv"
     "$TESTSTOOLS"/boot-state --help | MATCH "usage: boot-state bootenv"
+
+    # check the get-boot-path command
+    case "$SPREAD_SYSTEM" in
+        ubuntu-core-16-arm-*|ubuntu-core-18-arm-*|ubuntu-core-20-arm-*)
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/uboot/"
+            ;;
+        fedora-*|opensuse-*|amazon-*|centos-*)
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub2/"
+            ;;
+        *)
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub/"
+            ;;
+    esac
+
+    # ARM devices are not supported on ubuntu-core-18/20 due to fw_printenv/setenv are
+    # not provided by the system and as the devices boot with uboot so it is not
+    # possible to get any boot information as it is done with non arm devices.
+    if [[ "$SPREAD_SYSTEM" == ubuntu-core-18-arm-* ]] || [[ "$SPREAD_SYSTEM" == ubuntu-core-20-arm-* ]]; then
+        exit
+    fi
 
     # check the bootenv command
     case "$SPREAD_SYSTEM" in
@@ -22,19 +41,6 @@ execute: |
             # check bootnev command can be called
             "$TESTSTOOLS"/boot-state bootenv show
             ;; 
-    esac
-
-    # check the get-boot-path command
-    case "$SPREAD_SYSTEM" in
-        ubuntu-core-16-arm-*|ubuntu-core-18-arm-*|ubuntu-core-20-arm-*)
-            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/uboot/"
-            ;;
-        fedora-*|opensuse-*|amazon-*|centos-*)
-            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub2/"
-            ;;
-        *)
-            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub/"
-            ;;
     esac
 
     # check a new var can be set in bootenv
