--- a/tests/main/snaps-state/task.yaml
+++ b/tests/main/snaps-state/task.yaml
@@ -94,25 +94,27 @@ execute: |
             ;;
     esac
 
-    # Check the repack of the snapd deb into core and snapd snaps
-    "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core
-    test -e core/core-from-snapd-deb.snap
-    rm -rf core
+    if ls "$SPREAD_PATH"/../snapd_*.deb; then
+        # Check the repack of the snapd deb into core and snapd snaps
+        "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core
+        test -e core/core-from-snapd-deb.snap
+        rm -rf core
 
-    "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap snapd
-    test -e snapd/snapd-from-deb.snap
-    rm -rf snapd
+        "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap snapd
+        test -e snapd/snapd-from-deb.snap
+        rm -rf snapd
 
-    cp "$SPREAD_PATH"/../snapd_*.deb current_snapd.deb
-    "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core current_snapd.deb
-    test -e core/core-from-snapd-deb.snap
-    rm -rf core
+        cp "$SPREAD_PATH"/../snapd_*.deb current_snapd.deb
+        "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core current_snapd.deb
+        test -e core/core-from-snapd-deb.snap
+        rm -rf core
 
-    "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap snapd current_snapd.deb
-    test -e snapd/snapd-from-deb.snap
-    rm -rf snapd
+        "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap snapd current_snapd.deb
+        test -e snapd/snapd-from-deb.snap
+        rm -rf snapd
 
-    "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core noexist.deb 2>&1 | MATCH "snaps-state: deb file used to repack not found: noexist.deb"
+        "$TESTSTOOLS"/snaps-state repack-snapd-deb-into-snap core noexist.deb 2>&1 | MATCH "snaps-state: deb file used to repack not found: noexist.deb"
+    fi
 
     # Check the repach of the core snap info snapd snap
     if [ -d /snap/core/current ]; then
