--- a/tests/nested/manual/core20-save/task.yaml
+++ b/tests/nested/manual/core20-save/task.yaml
@@ -12,16 +12,19 @@ environment:
   NESTED_ENABLE_TPM/encrypted: "true"
   NESTED_ENABLE_SECURE_BOOT/encrypted: "true"
   NESTED_ADD_UBUNTU_SAVE/encrypted: "true"
+  NESTED_IMAGE_ID/encrypted: core20-encrypted
 
   # add ubuntu-save, but but no TPM or secure boot support
   NESTED_ENABLE_TPM/plainwithsave: "false"
   NESTED_ENABLE_SECURE_BOOT/plainwithsave: "false"
   NESTED_ADD_UBUNTU_SAVE/plainwithsave: "true"
+  NESTED_IMAGE_ID/plainwithsave: core20-plain-with-ubuntu-save
 
   # no ubuntu-save, no TPM, no secure boot
   NESTED_ENABLE_TPM/plain: "false"
   NESTED_ENABLE_SECURE_BOOT/plain: "false"
   NESTED_ADD_UBUNTU_SAVE/plain: "false"
+  NESTED_IMAGE_ID/plain: core20-plain-no-ubuntu-save
 
 prepare: |
     # NESTED_ENABLE_TPM and NESTED_ADD_UBUNTU_SAVE are used by build-image
