Simplify env setup with /etc/systemd/system/snapd.service.d/env-overrides.conf (thanks bboozzoo).

--- a/tests/main/download-timeout/task.yaml
+++ b/tests/main/download-timeout/task.yaml
@@ -7,12 +7,20 @@ details: |
 
 systems: [ubuntu-18.04*, ubuntu-2*]
 
-prepare: |
-  cp /etc/systemd/system/snapd.service.d/local.conf snapd.local.conf
+environment:
   # set minimum download speed that is a bit higher than the rate-limited speed set with tc.
   # also force 1-minute window, so the test doesn't have to run for full 5 minutes (the default
   # window).
-  sed -i 's/\(Environment=.*\)/\1 SNAPD_MIN_DOWNLOAD_SPEED=99000 SNAPD_DOWNLOAD_MEAS_WINDOW=1m/' /etc/systemd/system/snapd.service.d/local.conf
+  SNAP_MIN_DOWNLOAD_SPEED: 99000
+  SNAP_DOWNLOAD_MEAS_WINDOW: 1m
+  OVERRIDES_FILE: /etc/systemd/system/snapd.service.d/env-overrides.conf
+
+prepare: |
+  cat <<EOF >> "$OVERRIDES_FILE"
+  Environment=SNAP_MIN_DOWNLOAD_SPEED=${SNAP_MIN_DOWNLOAD_SPEED}
+  Environment=SNAP_DOWNLOAD_MEAS_WINDOW=${SNAP_DOWNLOAD_MEAS_WINDOW}
+  EOF
+
   systemctl daemon-reload
   systemctl restart snapd.{socket,service}
 
@@ -25,14 +33,12 @@ execute: |
   snap install lxd 2>&1 | MATCH "download too slow:"
 
   echo "Downloading a large snap fails too"
-  SNAP_MIN_DOWNLOAD_SPEED=99000 SNAP_DOWNLOAD_MEAS_WINDOW=1m snap download lxd 2>&1 | MATCH "download too slow:"
+  snap download lxd 2>&1 | MATCH "download too slow:"
 
 restore: |
   tc filter del dev ens4
   tc qdisc del dev ens4 ingress
 
-  # restore snapd service
-  cp snapd.local.conf /etc/systemd/system/snapd.service.d/local.conf
-  rm -f snapd.local.conf
+  rm -f "$OVERRIDES_FILE"
   systemctl daemon-reload
   systemctl restart snapd.{socket,service}
