--- a/tests/main/dbus-activation-name-conflict/task.yaml
+++ b/tests/main/dbus-activation-name-conflict/task.yaml
@@ -20,7 +20,7 @@ execute: |
 
     echo "Install a snap that provides the io.snapcraft.SnapDbusService session service"
     snap install --edge test-snapd-dbus-service
-    [ -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service ]
+    test -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service
 
     echo "Installing a second snap that tries to provide the name fails"
     if install_local test-snapd-dbus-service-conflicting 2> error.txt; then
