--- a/tests/main/dbus-activation-session/task.yaml
+++ b/tests/main/dbus-activation-session/task.yaml
@@ -4,6 +4,15 @@ prepare: |
     if ! tests.session has-session-systemd-and-dbus; then
         exit 0
     fi
+    # Ensure that snapd.session-agent.socket is enabled.  This may not
+    # be the case on distributions where presets have been used to
+    # disable it.
+    if [ ! -L /usr/lib/systemd/user/sockets.target.wants/snapd.session-agent.socket ] &&
+            ! systemctl --user --global is-enabled snapd.session-agent.socket; then
+        systemctl --user --global enable snapd.session-agent.socket
+        touch agent-was-enabled
+    fi
+
     snap set system experimental.user-daemons=true
     snap set system experimental.dbus-activation=true
     tests.session -u test prepare
@@ -13,6 +22,9 @@ restore: |
         exit 0
     fi
     tests.session -u test restore
+    if [ -f agent-was-enabled ]; then
+        systemctl --user --global disable snapd.session-agent.socket
+    fi
     snap unset system experimental.dbus-activation
     snap unset system experimental.user-daemons
 
@@ -29,7 +41,7 @@ execute: |
     snap install --edge test-snapd-dbus-service
 
     echo "A service activation file has been created"
-    [ -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service ]
+    test -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service
 
     echo "The service is not initially running"
     not tests.session -u test exec systemctl --user is-active snap.test-snapd-dbus-service.session.service
@@ -43,6 +55,7 @@ execute: |
     echo "The corresponding D-Bus service is now running"
     tests.session -u test exec systemctl --user is-active snap.test-snapd-dbus-service.session.service
 
-    echo "Removing the snap also removes the service activation file"
+    echo "Removing the snap stops the service and removes the service activation file"
     snap remove test-snapd-dbus-service
-    [ ! -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service ]
+    not tests.session -u test exec systemctl --user is-active snap.test-snapd-dbus-service.session.service
+    test ! -f /var/lib/snapd/dbus-1/services/io.snapcraft.SnapDbusService.service
