--- a/spread.yaml
+++ b/spread.yaml
@@ -173,6 +173,10 @@ backends:
                   image: ubuntu-2004-64-virt-enabled
                   storage: 20G
                   workers: 6
+            - ubuntu-20.10-64:
+                  image: ubuntu-2010-64-virt-enabled
+                  storage: 20G
+                  workers: 6
 
     qemu-nested:
         memory: 4G
@@ -843,6 +847,7 @@ suites:
             - ubuntu-16.04-64
             - ubuntu-18.04-64
             - ubuntu-20.04-64
+            - ubuntu-20.10-64
         environment:
             NESTED_TYPE: "classic"
             # Enable kvm in the qemu command line
