--- a/spread.yaml
+++ b/spread.yaml
@@ -494,7 +494,7 @@ repack: |
             find "$tmpdir/$DELTA_PREFIX/vendor/" ! -wholename "$tmpdir/$DELTA_PREFIX/vendor/" \
                 ! -wholename "$tmpdir/$DELTA_PREFIX/vendor/vendor.json" \
                 -delete
-            tar -C "$tmpdir" -c "$DELTA_PREFIX" > repacked-current.tar
+            tar -C "$tmpdir" -c "$DELTA_PREFIX" --sort=name > repacked-current.tar
         else
             cat <&3 > repacked-current.tar
         fi
