--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -268,6 +268,7 @@ jobs:
         - ubuntu-16.04-64
         - ubuntu-18.04-64
         - ubuntu-20.04-64
+        - ubuntu-20.10-64
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
