--- a/tests/nested/manual/core20-early-config/task.yaml
+++ b/tests/nested/manual/core20-early-config/task.yaml
@@ -76,10 +76,8 @@ execute: |
 
     # now transition to recover mode and check it again
     boot_id="$(nested_get_boot_id)"
-    # TODO:UC20: shouldn't need to specify the label here, fix when snap reboot
-    #            works
     # shellcheck disable=SC2016
-    nested_exec 'sudo snap reboot --recover $(sudo snap recovery | grep -v Label | awk "{print \$1}")'
+    nested_exec 'sudo snap reboot --recover'
     nested_wait_for_reboot "${boot_id}"
 
     # verify in recover mode
