--- a/tests/main/snap-validate-basic/task.yaml
+++ b/tests/main/snap-validate-basic/task.yaml
@@ -4,7 +4,7 @@ summary: Ensure `snap validate` commands work.
 # doesn't do much. Extend once all the functionality is available.
 
 execute: |
-  snap validate --help | MATCH "The validate command lists validation sets or sets validations"
+  snap validate --help | MATCH "The validate command lists or applies validations sets"
   snap validate > list.txt
   [[ $(wc -l < list.txt) == "0" ]]
 
