--- a/tests/main/uc20-create-partitions-encrypt/task.yaml
+++ b/tests/main/uc20-create-partitions-encrypt/task.yaml
@@ -17,9 +17,11 @@ restore: |
         umount ./mnt || true
     fi
     umount /run/mnt/ubuntu-seed || true
+    umount /dev/mapper/ubuntu-save || true
     umount /dev/mapper/ubuntu-data || true
     umount /dev/mapper/test-udata || true
 
+    cryptsetup close /dev/mapper/ubuntu-save || true
     cryptsetup close /dev/mapper/ubuntu-data || true
     cryptsetup close /dev/mapper/test-udata || true
 
@@ -107,14 +109,19 @@ execute: |
     sfdisk -d "$LOOP" | MATCH "^${LOOP}p1 .*size=\s*2048, type=21686148-6449-6E6F-744E-656564454649,.*BIOS Boot"
     sfdisk -d "$LOOP" | MATCH "^${LOOP}p2 .*size=\s*2457600, type=C12A7328-F81F-11D2-BA4B-00A0C93EC93B,.*ubuntu-seed"
     sfdisk -d "$LOOP" | MATCH "^${LOOP}p3 .*size=\s*1536000, type=0FC63DAF-8483-4772-8E79-3D69D8477DE4,.*ubuntu-boot"
-    sfdisk -d "$LOOP" | MATCH "^${LOOP}p4 .*size=\s*15533521, type=0FC63DAF-8483-4772-8E79-3D69D8477DE4,.*ubuntu-data"
+    sfdisk -d "$LOOP" | MATCH "^${LOOP}p4 .*size=\s*32768, type=0FC63DAF-8483-4772-8E79-3D69D8477DE4,.*ubuntu-save"
+    sfdisk -d "$LOOP" | MATCH "^${LOOP}p5 .*size=\s*15500753, type=0FC63DAF-8483-4772-8E79-3D69D8477DE4,.*ubuntu-data"
 
     not cryptsetup isLuks "${LOOP}p1"
     not cryptsetup isLuks "${LOOP}p2"
     not cryptsetup isLuks "${LOOP}p3"
     cryptsetup isLuks "${LOOP}p4"
+    cryptsetup isLuks "${LOOP}p5"
 
-    cryptsetup luksDump "${LOOP}p4" | MATCH 'Label:\s*ubuntu-data-enc'
+    cryptsetup luksDump "${LOOP}p4" | MATCH 'Label:\s*ubuntu-save-enc'
+    POSIXLY_CORRECT=1 file -s /dev/mapper/ubuntu-save | MATCH 'volume name "ubuntu-save"'
+
+    cryptsetup luksDump "${LOOP}p5" | MATCH 'Label:\s*ubuntu-data-enc'
     POSIXLY_CORRECT=1 file -s /dev/mapper/ubuntu-data | MATCH 'volume name "ubuntu-data"'
 
     cryptsetup close /dev/mapper/ubuntu-data
@@ -123,14 +130,14 @@ execute: |
 
     # Test the unsealed key
     echo "Ensure that we can open the encrypted device using the unsealed key"
-    cryptsetup open --key-file unsealed-key "${LOOP}p4" test
+    cryptsetup open --key-file unsealed-key "${LOOP}p5" test
     mount /dev/mapper/test ./mnt
     umount ./mnt
     cryptsetup close /dev/mapper/test
 
     # Test the recovery key
     echo "Ensure that we can open the encrypted device using the recovery key"
-    cryptsetup open --key-file recovery-key "${LOOP}p4" test-recovery
+    cryptsetup open --key-file recovery-key "${LOOP}p5" test-recovery
     mount /dev/mapper/test-recovery ./mnt
     umount ./mnt
     cryptsetup close /dev/mapper/test-recovery
