--- a/tests/nested/manual/core20-save/task.yaml
+++ b/tests/nested/manual/core20-save/task.yaml
@@ -11,23 +11,23 @@ environment:
   # ubuntu-save, TPM, secure boot
   NESTED_ENABLE_TPM/encrypted: "true"
   NESTED_ENABLE_SECURE_BOOT/encrypted: "true"
-  NESTED_ADD_UBUNTU_SAVE/encrypted: "true"
+  NESTED_UBUNTU_SAVE/encrypted: "add"
   NESTED_IMAGE_ID/encrypted: core20-encrypted
 
   # add ubuntu-save, but but no TPM or secure boot support
   NESTED_ENABLE_TPM/plainwithsave: "false"
   NESTED_ENABLE_SECURE_BOOT/plainwithsave: "false"
-  NESTED_ADD_UBUNTU_SAVE/plainwithsave: "true"
+  NESTED_UBUNTU_SAVE/plainwithsave: "add"
   NESTED_IMAGE_ID/plainwithsave: core20-plain-with-ubuntu-save
 
   # no ubuntu-save, no TPM, no secure boot
   NESTED_ENABLE_TPM/plain: "false"
   NESTED_ENABLE_SECURE_BOOT/plain: "false"
-  NESTED_ADD_UBUNTU_SAVE/plain: "false"
+  NESTED_UBUNTU_SAVE/plain: "remove"
   NESTED_IMAGE_ID/plain: core20-plain-no-ubuntu-save
 
 prepare: |
-    # NESTED_ENABLE_TPM and NESTED_ADD_UBUNTU_SAVE are used by build-image
+    # NESTED_ENABLE_TPM and NESTED_UBUNTU_SAVE are used by build-image
     "$TESTSTOOLS"/nested-state build-image core
     # NESTED_ENABLE_TPM is used by create-vm
     "$TESTSTOOLS"/nested-state create-vm core
@@ -46,7 +46,7 @@ execute: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
 
-    if [ "$NESTED_ADD_UBUNTU_SAVE" != "true" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
+    if [ "${NESTED_UBUNTU_SAVE:-}" != "add" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
         # no ubuntu-save, make sure one isn't mounted
         nested_exec "! mountpoint /run/mnt/ubuntu-save"
         nested_exec "! mountpoint /var/lib/snapd/save"
@@ -83,7 +83,7 @@ execute: |
 
     # happily running in recover mode
 
-    if [ "$NESTED_ADD_UBUNTU_SAVE" != "true" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
+    if [ "${NESTED_UBUNTU_SAVE:-}" != "add" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
         # no ubuntu-save
         nested_exec "! mountpoint /run/mnt/ubuntu-save"
         nested_exec "! mountpoint /var/lib/snapd/save"
