--- a/tests/lib/tools/suite/tests.pkgs/task.yaml
+++ b/tests/lib/tools/suite/tests.pkgs/task.yaml
@@ -8,8 +8,8 @@ execute: |
     tests.pkgs --help | MATCH 'usage: tests.pkgs {install,remove} \[PACKAGE...\]'
 
     # Check the test pkg is not installed and cannot be queried
-    ! tests.pkgs query test-snapd-pkg
-    ! tests.pkgs is-installed test-snapd-pkg
+    not tests.pkgs query test-snapd-pkg
+    not tests.pkgs is-installed test-snapd-pkg
 
     # Install the test pkg and check it is installed and query it
     tests.pkgs install test-snapd-pkg
@@ -19,7 +19,7 @@ execute: |
     # Remove the test pkg and check it is not installed anymore and query it
     tests.pkgs remove test-snapd-pkg
     tests.pkgs query test-snapd-pkg
-    ! tests.pkgs is-installed test-snapd-pkg
+    not tests.pkgs is-installed test-snapd-pkg
 
     # Check the message when a command is not supported
     tests.pkgs noexist test-snapd-pkg 2>&1 | MATCH 'tests.pkgs: unknown command noexist'
