--- a/tests/nested/core20/tpm/task.yaml
+++ b/tests/nested/core20/tpm/task.yaml
@@ -52,3 +52,9 @@ execute: |
 
     # check for sealed keys marker
     nested_exec "test -f /var/lib/snapd/device/fde/sealed-keys"
+
+    # check that kernel command line is properly recorded
+    cmdline_modeenv="$(grep current_kernel_command_lines= < modeenv  | sed -e 's/current_kernel_command_lines=//' | jq -r '.[0]')"
+    cmdline="$(nested_exec "cat /proc/cmdline")"
+    test "$cmdline" = "$cmdline_modeenv"
+    echo "$cmdline" | MATCH "snapd_recovery_mode=run "
