tests/nested/core20/tpm: verify kernel command lines being restored during successful boot
If empty, the kernel command line in modeenv is restored upon successful boot.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/nested/core20/tpm/task.yaml
+++ b/tests/nested/core20/tpm/task.yaml
@@ -58,3 +58,11 @@ execute: |
     cmdline="$(nested_exec "cat /proc/cmdline")"
     test "$cmdline" = "$cmdline_modeenv"
     echo "$cmdline" | MATCH "snapd_recovery_mode=run "
+
+    # check that kernel command lines is restored when booted successfully
+    nested_exec "sudo sed -i -e 's/current_kernel_command_lines=.*/current_kernel_command_lines=/' /var/lib/snapd/modeenv"
+    boot_id="$( nested_get_boot_id )"
+    nested_exec "sudo reboot" || true
+    nested_wait_for_reboot "${boot_id}"
+    cmdline_modeenv_restored="$(grep current_kernel_command_lines= < modeenv  | sed -e 's/current_kernel_command_lines=//' | jq -r '.[0]')"
+    test "$cmdline_modeenv_restored" = "$cmdline_modeenv"
