--- a/tests/lib/tools/suite/tests.pkgs/task.yaml
+++ b/tests/lib/tools/suite/tests.pkgs/task.yaml
@@ -7,22 +7,30 @@ execute: |
     tests.pkgs -h | MATCH 'usage: tests.pkgs {install,remove} \[PACKAGE...\]'
     tests.pkgs --help | MATCH 'usage: tests.pkgs {install,remove} \[PACKAGE...\]'
 
-    # Check the test pkg is not installed and cannot be queried
-    not tests.pkgs query test-snapd-pkg
-    not tests.pkgs is-installed test-snapd-pkg
+    # Check the test pkg is not installed
+    not tests.pkgs is-installed test-snapd-pkg-1
 
     # Install the test pkg and check it is installed and query it
-    tests.pkgs install test-snapd-pkg
-    tests.pkgs query test-snapd-pkg
-    tests.pkgs is-installed test-snapd-pkg
+    tests.pkgs install test-snapd-pkg-1
+    tests.pkgs query test-snapd-pkg-1
+    tests.pkgs is-installed test-snapd-pkg-1
 
     # Remove the test pkg and check it is not installed anymore and query it
-    tests.pkgs remove test-snapd-pkg
-    tests.pkgs query test-snapd-pkg
-    not tests.pkgs is-installed test-snapd-pkg
+    tests.pkgs remove test-snapd-pkg-1
+    tests.pkgs query test-snapd-pkg-1
+    not tests.pkgs is-installed test-snapd-pkg-1
+
+    # Install 2 test pkgs and check they are is installed
+    tests.pkgs install test-snapd-pkg-1 test-snapd-pkg-2
+    tests.pkgs is-installed test-snapd-pkg-1
+    tests.pkgs is-installed test-snapd-pkg-2
+
+    # Remove 2 test pkgs and check they are is not installed anymore
+    tests.pkgs remove test-snapd-pkg-1 test-snapd-pkg-2
+    not tests.pkgs is-installed test-snapd-pkg-1
+    not tests.pkgs is-installed test-snapd-pkg-2
 
     # Check the message when a command is not supported
-    tests.pkgs noexist test-snapd-pkg 2>&1 | MATCH 'tests.pkgs: unknown command noexist'
-    tests.pkgs -install test-snapd-pkg 2>&1 | MATCH 'tests.pkgs: unknown option -install'
+    tests.pkgs noexist test-snapd-pkg-1 2>&1 | MATCH 'tests.pkgs: unknown command noexist'
+    tests.pkgs -install test-snapd-pkg-1 2>&1 | MATCH 'tests.pkgs: unknown option -install'
 
-    # TODO: install and remove more than 1 pkg with the command install/remove
