--- a/tests/nested/core20/tpm/task.yaml
+++ b/tests/nested/core20/tpm/task.yaml
@@ -64,5 +64,9 @@ execute: |
     boot_id="$( nested_get_boot_id )"
     nested_exec "sudo reboot" || true
     nested_wait_for_reboot "${boot_id}"
-    cmdline_modeenv_restored="$(grep current_kernel_command_lines= < modeenv  | sed -e 's/current_kernel_command_lines=//' | jq -r '.[0]')"
+    # the test will race with snapd updating the modeenv, wait for the modenv to
+    # have a good state
+    nested_retry_until_success 10 5 "grep -E \"current_kernel_command_lines=.*snapd_recovery_mode=run\" < /var/lib/snapd/modeenv"
+    nested_exec "cat /var/lib/snapd/modeenv" > modeenv.after-reboot
+    cmdline_modeenv_restored="$(grep current_kernel_command_lines= < modeenv.after-reboot  | sed -e 's/current_kernel_command_lines=//' | jq -r '.[0]')"
     test "$cmdline_modeenv_restored" = "$cmdline_modeenv"
