--- a/tests/main/cloud-init/task.yaml
+++ b/tests/main/cloud-init/task.yaml
@@ -17,9 +17,7 @@ execute: |
     if [[ ! -e /run/cloud-init/instance-data.json ]]; then
         echo "cloud-init instance data is required to execute the test"
 
-        if [[ "$SPREAD_SYSTEM" == ubuntu-* &&
-              "$SPREAD_SYSTEM" != ubuntu-14.04-* &&
-              "$SPREAD_SYSTEM" != ubuntu-core-20-* ]]; then
+        if os.query is-ubuntu && not os.query is-trusty && not os.query is-core20; then
             # we expect the test to run on all Ubuntu images,
             # excluding 14.04/core20
             echo "the test expected to run on $SPREAD_SYSTEM"
@@ -76,7 +74,7 @@ execute: |
     snap_cloud_region=$(snap get core cloud.region)
     test "$cloud_region" = "$snap_cloud_region"
 
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-* ]]; then
+    if os.query is-core; then
         # TODO: is there a race here with snapd restricting cloud-init and us
         # checking that it was restricted?
         echo "Test that cloud-init restrict file was written"
