--- a/tests/main/os.query/task.yaml
+++ b/tests/main/os.query/task.yaml
@@ -13,47 +13,55 @@ execute: |
             os.query is-core16
             not os.query is-core18
             not os.query is-classic
+            os.query is-ubuntu
             ;;
         ubuntu-core-18-*)
             os.query is-core
             os.query is-core18
             not os.query is-core20
             not os.query is-classic
+            os.query is-ubuntu
             ;;
         ubuntu-core-20-*)
             os.query is-core
             os.query is-core20
             not os.query is-core18
             not os.query is-classic
+            os.query is-ubuntu
             ;;
         ubuntu-14-*)
             os.query is-classic
             os.query is-trusty
             not os.query is-bionic
             not os.query is-core
+            os.query is-ubuntu
             ;;
         ubuntu-16-*)
             os.query is-classic
             os.query is-xenial
             not os.query is-bionic
             not os.query is-core
+            os.query is-ubuntu
             ;;
         ubuntu-18-*)
             os.query is-classic
             os.query is-bionic
             not os.query is-focal
             not os.query is-core
+            os.query is-ubuntu
             ;;
         ubuntu-20.04-*)
             os.query is-classic
             os.query is-focal
             not os.query is-xenial
             not os.query is-core
+            os.query is-ubuntu
             ;;
         *)
             os.query is-classic
             not os.query is-focal
             not os.query is-core
+            not os.query is-ubuntu
             ;;
     esac
 
