--- a/tests/main/install-fontconfig-cache-gen/task.yaml
+++ b/tests/main/install-fontconfig-cache-gen/task.yaml
@@ -26,7 +26,7 @@ prepare: |
     fc-cat /var/cache/fontconfig/* 2>/dev/null | MATCH "$NAME"
 
 restore: |
-    if if os.query is-xenial; then
+    if os.query is-xenial; then
         PKG=fonts-kiloji
     else
         PKG=fonts-noto-color-emoji
@@ -35,7 +35,7 @@ restore: |
     apt autoremove -y "$PKG" || true
 
 execute: |
-    if if os.query is-xenial; then
+    if os.query is-xenial; then
         NAME=kiloji
     else
         NAME=NotoColorE
