--- a/tests/main/interfaces-avahi-observe/task.yaml
+++ b/tests/main/interfaces-avahi-observe/task.yaml
@@ -10,7 +10,7 @@ prepare: |
 
     echo "And avahi-daemon is configured"
     sed -i 's/^#enable-dbus=yes/enable-dbus=yes/' /etc/avahi/avahi-daemon.conf
-    if if os.query is-trusty; then
+    if os.query is-trusty; then
         initctl reload-configuration
         restart avahi-daemon
     else
