--- a/tests/nested/core20/basic/task.yaml
+++ b/tests/nested/core20/basic/task.yaml
@@ -42,7 +42,7 @@ execute: |
     fi
 
     echo "Wait for device initialisation to be done"
-    while ! nested_exec snap changes | grep -q "Done.*Initialize device"; do sleep 1; done
+    nested_retry_until_success 10 5 "snap changes | grep -q 'Done.*Initialize device'"
 
     echo "Check that the serial backed up to save is as expected"
     nested_exec 'cat /var/lib/snapd/save/device/asserts-v0/serial/'"$(nested_model_authority)"'/pc/*/active' >serial.saved
