use is-arch-linux instead of is-arch
This is because arch could be used for architecture

--- a/tests/main/os.query/task.yaml
+++ b/tests/main/os.query/task.yaml
@@ -73,7 +73,7 @@ execute: |
             os.query is-opensuse
             ;;
         arch-*)
-            os.query is-arch
+            os.query is-arch-linux
             ;;
         debian-*)
             os.query is-debian
