--- a/tests/upgrade/basic/task.yaml
+++ b/tests/upgrade/basic/task.yaml
@@ -101,7 +101,7 @@ execute: |
         # allow-downgrades prevents errors when new versions hit the archive, for instance,
         # trying to install 2.11ubuntu1 over 2.11+0.16.04
         pkg_extension="$(distro_get_package_extension)"
-        if os.query is-arch; then
+        if os.query is-arch-linux; then
             # Arch's pacman is a bit funky here, the command that's run is:
             #    pacman -U --noconfirm --force /home/gopath/snapd-*.pkg.tar.xz
             # The official repo package contains snapd and snap-confine. The local test package
