--- a/tests/regression/lp-1906821/task.yaml
+++ b/tests/regression/lp-1906821/task.yaml
@@ -30,7 +30,7 @@ execute: |
     #shellcheck disable=SC2016
     test-snapd-complex-layout.sh -c 'test -e $SNAP/certs/non-instance'
     #shellcheck disable=SC2016
-    ! test-snapd-complex-layout.sh -c 'test -e $SNAP/certs/prime-instance'
+    not test-snapd-complex-layout.sh -c 'test -e $SNAP/certs/prime-instance'
     #shellcheck disable=SC2016
     test-snapd-complex-layout_prime.sh -c 'test -e $SNAP/certs/prime-instance'
     #shellcheck disable=SC2016
