tests: add TODO:UC20: in the uc20-create-partitions* tests

--- a/tests/main/uc20-create-partitions-encrypt/task.yaml
+++ b/tests/main/uc20-create-partitions-encrypt/task.yaml
@@ -93,8 +93,8 @@ execute: |
     sbverify --list "$seedbootdir"/grubx64.efi
     sbverify --list "$bootdir"/grubx64.efi
 
-    # XXX: make kernel-dir non-empty once we have a gadget that has a
-    #      "$kernel:" style ref in the meta/gadget.yaml
+    # TODO:UC20: make kernel-dir non-empty once we have a gadget that has a
+    #            "$kernel:" style ref in the meta/gadget.yaml
     kerneldir=""
     echo "Run the snap-bootstrap tool"
     go get ../../lib/uc20-create-partitions
