--- a/tests/main/lxd/task.yaml
+++ b/tests/main/lxd/task.yaml
@@ -3,7 +3,8 @@ summary: Ensure that lxd works
 # Only run this on ubuntu 16+, lxd will not work on !ubuntu systems
 # currently nor on ubuntu 14.04
 # TODO: enable for ubuntu-16-32 again
-systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*, ubuntu-core-*]
+# TODO: enable for ubuntu-21.04-64 when the ñxd image is available
+systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*, ubuntu-core-*, -ubuntu-21.04-64]
 
 # autopkgtest run only a subset of tests that deals with the integration
 # with the distro
