tests: add new ca-certs-for-snaps test

--- a/tests/main/dirs-not-shared-with-host/task.yaml
+++ b/tests/main/dirs-not-shared-with-host/task.yaml
@@ -8,7 +8,7 @@ details: |
   consistent behaviour across various distributions.
 
 environment:
-    DIRECTORY/ssl: /etc/ssl
+    DIRECTORY/apparmord: /etc/apparmor.d
 
 # This test only applies to classic systems
 systems: [-ubuntu-core-*]
@@ -16,10 +16,6 @@ systems: [-ubuntu-core-*]
 prepare: |
     echo "Having installed the test snap"
     "$TESTSTOOLS"/snaps-state install-local test-snapd-sh
-    touch "$DIRECTORY"/file-from-host
-
-restore: |
-    rm -f "$DIRECTORY"/file-from-host
 
 execute: |
     #shellcheck source=tests/lib/dirs.sh
@@ -31,15 +27,7 @@ execute: |
     else
         core_inode=$(stat -c '%i' "$SNAP_MOUNT_DIR/ubuntu-core/current/$DIRECTORY")
     fi
-    [ "$host_inode" != "$core_inode" ]
-
     effective_inode=$(test-snapd-sh.sh -c "stat -c '%i' $DIRECTORY")
-    if [[ "$SPREAD_SYSTEM" = ubuntu-* ]] || [[ "$SPREAD_SYSTEM" = debian-* ]]; then
-         echo "On Ubuntu/Debian the inode as seen from the confined snap should be that of the host snap for /etc/ssl"
-         [ "$effective_inode" = "$host_inode" ]
-         test-snapd-sh.sh -c "test -e $DIRECTORY/file-from-host"
-    else
-         echo "The inode number as seen from a confined snap should be that of the $DIRECTORY from the core snap"
-         [ "$effective_inode" = "$core_inode" ]
-         test-snapd-sh.sh -c "test ! -e $DIRECTORY/file-from-host"
-    fi
+    echo "The inode number as seen from a confined snap should be that of the $DIRECTORY from the core snap"
+    [ "$host_inode" != "$core_inode" ]
+    [ "$effective_inode" = "$core_inode" ]
