Try other label

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,2 +1,2 @@
 # Add 'Run nested' label
-Run nested: [ 'tests/lib/nested.sh', 'tests/nested/**' ]
+Simple: ['tests/lib/nested.sh', 'tests/nested/**']
