--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,7 +1,6 @@
 name: "Pull Request Labeler"
 on:
-  pull_request_target:
-    types: [opened, reopened, edited, synchronize]
+- pull_request_target
 
 jobs:
   triage:
